# UdemyRust

./: .gitattributes  .gitignore  Notes.md  README.md  Structure.md  TODO.md  TODO.txt
Chapter01/: Intro_Eng.pptx  Introduction.pptx
Chapter03/enums2/: Cargo.toml
Chapter03/if_let/: Cargo.toml
Chapter03/string_slices/: Cargo.toml
Chapter03/tuples/: Cargo.toml
Chapter03/while_let/: Cargo.toml
Chapter03/while_lets/: Cargo.toml
Chapter04/borrow_ends/: Cargo.toml
Chapter04/borrow_rules/: Cargo.toml
Chapter04/borrowing_rules/: Cargo.toml
Chapter04/copy_or_move/: Cargo.toml
Chapter04/rcs/: Cargo.toml
Chapter04/statics_constants/: Cargo.toml
Chapter05/function_pointer/: Cargo.toml
Chapter05/generics2/: Cargo.toml
Chapter05/generics3/: Cargo.toml
Chapter06/iterator_functions/: Cargo.toml
Chapter06/iterator_functions2/: Cargo.toml
Chapter06/iterator_trait/: Cargo.toml
Chapter06/iterators1/: Cargo.toml
Chapter06/iterators2/: Cargo.toml
Chapter06/iterators3/: Cargo.toml
Chapter06/maps/: Cargo.toml
Chapter06/sets/: Cargo.toml
Chapter07/7_2/benches/: Cargo.toml
Chapter07/7_2/benches/benches/: bench_circle.rs
Chapter07/7_2/benches/src/: lib.rs
Chapter07/7_2/compile_options/: Cargo.toml
Chapter07/workspace/: Cargo.toml
Chapter08/asyncs/: Cargo.toml
Chapter08/mutexes/: Cargo.toml
Chapter09/no_inheritance/: Cargo.toml
Chapter09/oop_example/: Cargo.toml
Chapter09/operator_overlaod/: Cargo.toml
Chapter09/operator_overloads/: Cargo.toml
Chapter11/: Introduction.pptx
project02/: Copy.toml
project2/: Cargo.toml
(+252 files in other folders)
